war/css/wp.css
/*! WordPong CSS */
.wp-page{width:100%;}
.wp-logo { text-align:center; }
.wp-right-button {float:right; margin:2px 10px; padding:0px;}
.wp-nav {overflow:hidden;float:right;margin:0;padding:0;height:40px}
.wp-invisible {overflow:none;float:right;visibility:hidden; height:0; padding:0; margin:0}
.up {color:green; }
.down {color:red; }
.wp-status {float:right; padding:2px 25px 10px;font-size:small}
.wp-date  {float:left; padding:2px 0 10px 25px;font-size:small}
.wp-footer{float:left; padding:0 0 10px 25px;font-size:small;}
.wp-footer-file{float:left; padding:10px 0 10px 25px;font-size:small;color:gray;margin-bottom:1000px;}
.wp-loading{width:100%;font-size:small;padding:20;text-align:center}
.wp-small-text{font-size:60%}
#Stripes Error msgs
.errors {
    color: white;
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-weight: bold;
    margin-bottom: 10px;
}
#Stripes Info messages
.messages {
    color: white;
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-weight: bold;
    margin-bottom: 10px;
}
#JQuery orientation classes
.portrait {
    /* portrait orientation changes go here! */
}
.landscape {
    /* landscape orientation changes go here! */
}   

.ui-icon-wp-question {
	background: url("/i/wp-question.png") no-repeat rgba(0, 0, 0, 0.4) !important;
}
.ui-icon-wp-question-add {
	background: url("/i/wp-question-add.png") no-repeat rgba(0, 0, 0, 0.4) !important;
}
.ui-icon-wp-friend {
	background: url("/i/wp-friend.png") no-repeat rgba(0, 0, 0, 0.4) !important;
}
.ui-icon-wp-friend-add {
	background: url("/i/wp-friend-add.png") no-repeat rgba(0, 0, 0, 0.4) !important;
}
.ui-icon-wp-answer-add {
	background: url("/i/wp-answer-add.png") no-repeat rgba(0, 0, 0, 0.4) !important;
}

